--- a/afu_igel/build.gradle
+++ b/afu_igel/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 import java.nio.file.Paths
 import de.undercouch.gradle.tasks.download.Download
 
-defaultTasks "dbImport"
+defaultTasks "transformAndPub"
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def igelTypes = ["standort", "stall"]
