--- a/arp_fledermaus/build.gradle
+++ b/arp_fledermaus/build.gradle
@@ -1,3 +1,4 @@
+/*
 buildscript {
     repositories {
         maven { url "https://repo.osgeo.org/repository/release/" }
@@ -12,7 +13,9 @@ buildscript {
     }
 }
 
+
 apply plugin: "ch.so.agi.gretl"
+*/
 
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.util.TaskUtil
@@ -20,6 +23,8 @@ import java.nio.file.Paths
 import java.nio.file.Files
 import java.io.FileOutputStream
 import org.apache.commons.net.ftp.*
+
+defaultTasks downloadData
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def remoteFileName = "export.csv"
