[arp_fledermaus] fix missing quotation marks in defaultTasks

--- a/arp_fledermaus/build.gradle
+++ b/arp_fledermaus/build.gradle
@@ -24,7 +24,7 @@ import java.nio.file.Files
 import java.io.FileOutputStream
 import org.apache.commons.net.ftp.*
 
-defaultTasks downloadData
+defaultTasks "downloadData"
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 def remoteFileName = "export.csv"
