--- a/agi_av_export_ai/build.gradle
+++ b/agi_av_export_ai/build.gradle
@@ -1,5 +1,6 @@
 import ch.so.agi.gretl.tasks.*
 import java.nio.file.Paths
+import java.nio.file.Files
 import de.undercouch.gradle.tasks.download.Download
 
 
@@ -30,10 +31,14 @@ def BfsNrGemeinden = [2401, 2402, 2403, 2404, 2405, 2406, 2407, 2408,
 
 
 def ZipName = 'LV95.zip'
-def pathToTempFolder = System.getProperty("java.io.tmpdir")
+def pathToTempFolder = Files.createTempDirectory("avexportai-").toFile().getAbsolutePath()
 def pathToUnzipFolder = Paths.get(pathToTempFolder, 'unzip_data')
 
 def aiLogin = aiUser + ":" + aiPwd
+
+if (!new File(pathToTempFolder).exists()) {
+    new File(pathToTempFolder).mkdirs();
+}
 
 defaultTasks 'uploadAvCh'
 
@@ -82,7 +87,6 @@ task zipAllDataToOneZipArchiv(type: Zip, dependsOn: unzipAllData){
     destinationDir(file(pathToTempFolder))
     include "**/2*00.itf"
 }
-
 
 task uploadAvCh(dependsOn: zipAllDataToOneZipArchiv) {
     description = "Lädt die Daten der amtlichen Vermessung (DM01 vom Bund) in die Aggregationsinfrastruktur hoch."
