Test 2 mit Dateiupload

--- a/awjf_waldpflege_kontrolle/build.gradle
+++ b/awjf_waldpflege_kontrolle/build.gradle
@@ -10,6 +10,11 @@ def pathToUploadFolder = 'upload'
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 
 
+task uploadGesuchsteller(type: Exec){
+    commandLine 'head', 'upload/uploadFile'
+}
+
+
 task deleteFromAwjfGesuchsteller(type: SqlExecutor){
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     sqlFiles = ['delete_from_awjf_gesuchsteller.sql']
