[avt_achesn_pub] Add a file upload enabled Jenkinsfile

--- a/avt_achsen_pub/build.gradle
+++ b/avt_achsen_pub/build.gradle
@@ -10,7 +10,7 @@ def shpNamePunkte = 'bezugspunkte.shp'
 def pathToShpFolder = Paths.get(System.getProperty("java.io.tmpdir"), "avt_achsen").toString() 
 
 task unpackShapes(type: Copy) {
-    from zipTree("shapes.zip") // @Andi: Dies ist der "Uebernahmepunkt" für das zip.  
+    from zipTree("uploadFile")
     into pathToShpFolder
 }
 
