[avt_ausnahmetransportrouten_export_ai] Adapt Jenkinsfile to other Jenkinsfiles
Use the exactly same Jenkinsfile in every job that provides the file upload feature

--- a/avt_ausnahmetransportrouten_export_ai/Jenkinsfile
+++ b/avt_ausnahmetransportrouten_export_ai/Jenkinsfile
@@ -3,7 +3,7 @@ node('master') {
     stage('Prepare') {
         gretlJobRepoUrl = env.GRETL_JOB_REPO_URL
         uploadDirName = 'upload'
-        uploadFileName = 'data.xtf'
+        uploadFileName = 'uploadFile'
         // By default the uploaded file is stored in the following directory:
         buildDir = "$JENKINS_HOME/jobs/$JOB_BASE_NAME/builds/$BUILD_NUMBER"
         // Create a subdirectory for the uploaded file:
