--- a/amb_zivilschutz_adressen_export/build.gradle
+++ b/amb_zivilschutz_adressen_export/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'org.hidetake.ssh'
 
 remotes {
     ftpServer {
-        host = "${ftpURLZivilschutz}"
+        host = "${ftpServerZivilschutz}"
         user = "${ftpUserZivilschutz}"
         password = "${ftpPwdZivilschutz}"
     }
