[arp_fledermaus] add truncate sq

--- a/arp_fledermaus/build.gradle
+++ b/arp_fledermaus/build.gradle
@@ -74,3 +74,8 @@ task truncateTable(type: SqlExecutor, dependsOn: 'downloadData') {
     ]
 }
 
+task validateCsv(type: CsvValidator, dependsOn: 'truncateTable') {
+    models = "SO_ARP_Fledermausfundorte_20200728"
+    firstLineIsHeader = true
+    dataFiles = [pathToTempFolder.toString()+"/export.csv"]
+}
