[arp_fledermaus] finish job

--- a/arp_fledermaus/build.gradle
+++ b/arp_fledermaus/build.gradle
@@ -79,3 +79,21 @@ task validateCsv(type: CsvValidator, dependsOn: 'truncateTable') {
     firstLineIsHeader = true
     dataFiles = [pathToTempFolder.toString()+"/export.csv"]
 }
+
+task importCsv(type: CsvImport, dependsOn: 'validateCsv') {
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    schemaName = "arp_fledermaus"
+    tableName = "fledermausfundrte_fledermausfundort"
+    firstLineIsHeader = true
+    valueSeparator = ","
+    encoding = "UTF-8"
+    dataFile = file(pathToTempFolder.toString()+"/export.csv")
+}
+
+task transferFledermausPub(type: Db2Db, dependsOn: 'importCsv') {
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    transferSets = [
+            new TransferSet('arp_fledermaus_pub.sql', 'arp_fledermaus_pub.fledermausfundrte_fledermausfundort', true)
+    ];
+}
