--- a/arp_fledermaus/build.gradle
+++ b/arp_fledermaus/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 }
 
 import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
 import ch.so.agi.gretl.util.TaskUtil
 import java.nio.file.Paths
 import java.nio.file.Files
@@ -20,7 +21,7 @@ import org.apache.commons.net.ftp.*
 apply plugin: 'ch.so.agi.gretl'
 
 
-defaultTasks "truncateTable"
+defaultTasks "transferFledermausPub"
 
 def pathToTempFolder = Files.createTempDirectory("arpfledermaus-").toFile().getAbsolutePath()
 def remoteFileName = "export.csv"
